--- a/backend/package.json
+++ b/backend/package.json
@@ -24,5 +24,8 @@
     "path": "^0.12.7",
     "sequelize": "^6.6.5",
     "sequelize-cli": "^6.2.0"
+  },
+  "devDependencies": {
+    "@types/sequelize": "^4.28.10"
   }
 }
