--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,7 @@
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
-    "multer": "^1.4.3",
+    "multer": "^2.0.0-rc.1",
     "mysql2": "^2.3.0",
     "nodemon": "^2.0.13",
     "path": "^0.12.7",
