--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -7,10 +7,10 @@
     "dialect": "mysql"
   },
   "test": {
-    "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
+    "username": "jeanchal",
+    "password": "Edenpark@1987",
+    "database": "Groupomania",
+    "host": "localhost",
     "dialect": "mysql"
   },
   "production": {
