--- a/backend/package.json
+++ b/backend/package.json
@@ -16,14 +16,18 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "faker": "^5.5.3",
     "fs": "^0.0.1-security",
+    "jest": "^27.2.4",
+    "jest-cli": "^27.2.4",
     "jsonwebtoken": "^8.5.1",
     "multer": "^2.0.0-rc.1",
     "mysql2": "^2.3.0",
     "nodemon": "^2.0.13",
     "path": "^0.12.7",
     "sequelize": "^6.6.5",
-    "sequelize-cli": "^6.2.0"
+    "sequelize-cli": "^6.2.0",
+    "supertest": "^6.1.6"
   },
   "devDependencies": {
     "@types/sequelize": "^4.28.10"
