--- a/backend/config/.env-dist
+++ b/backend/config/.env-dist
@@ -1,6 +1,6 @@
 SECURITY_TOKEN="ajouter une clé de sécurité pour token jwt"
 PORT="ajouter port serveur"
 HOST="ajouter host"
-USER=test
-PASSWORD=test
-DATABASE=groupomania
+USER="ajouter user"
+PASSWORD="ajouter mot de passe"
+DATABASE="ajouter database"
