--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
-    "username": "test",
-    "password": "test",
+    "username": "root",
+    "password": "",
     "database": "databasetest",
     "host": "127.0.0.1",
     "dialect": "mysql"
